--- a/src/App.sass
+++ b/src/App.sass
@@ -18,8 +18,8 @@ html, body, *
 .view
     width: 94%
     max-width: 1900px
-    height: calc(100% - 142px)
-    overflow: hidden
+    height: calc(100% - 152px)
+    overflow-x: hidden
     display: flex
     justify-content: center
     align-items: center
