--- a/src/pages/Contacts/index.sass
+++ b/src/pages/Contacts/index.sass
@@ -5,6 +5,9 @@
 
     .left-side, .right-side
         width: 50%
+        
+        a
+            text-decoration: none
 
         h1, h2, p, .links
             margin-left: 90px
