--- a/src/components/UI/Carousel/index.sass
+++ b/src/components/UI/Carousel/index.sass
@@ -39,6 +39,8 @@
 
         img
             transition: opacity 500ms, transform 500ms
+            max-height: 100%
+            max-width: 100%
 
     .right-side
         .fade-enter
@@ -73,3 +75,30 @@
         .fade-exit-active
             opacity: 0
             transform: translateX(100%)
+
+@media (max-width: 767px)
+    .carousel
+        flex-direction: column
+        .pagination
+            flex-direction: row
+            height: 80px
+        
+        .left-side, .right-side
+            width: 100%
+
+            h1, p
+                text-align: center
+
+            h1
+                font-size: 30px
+                letter-spacing: 0.1em
+            
+            p
+                font-size: 16px
+        
+        .left-side
+            height: calc(30% - 40px)
+        
+        .right-side
+            height: calc(70% - 40px)
+
