--- a/src/components/UI/Navbar/index.sass
+++ b/src/components/UI/Navbar/index.sass
@@ -18,6 +18,9 @@
         display: flex
         justify-content: space-between
 
+        .main, .additional
+            display: flex
+
         li
             padding: 0 24px
             display: flex
@@ -27,43 +30,41 @@
                 text-decoration: none
                 color: #000000
 
-            .contacts-container
-                height: 100%
-                display: flex
-                justify-content: center
-                align-items: center
-                
-                span
-                    width: 1px
-                    background: grey
-                    height: 80%
-                    margin: 0 10px
-                
-                h3
-                    font-style: normal
-                    font-weight: bold
-                    font-size: 18px
-                    letter-spacing: 0.02em
-                    color: #000000
+        .info
+            height: 100%
+            display: flex
+            justify-content: center
+            align-items: center
+            
+            span
+                width: 1px
+                background: grey
+                height: 80%
+                margin: 0 10px
+            
+            h3
+                font-style: normal
+                font-weight: bold
+                font-size: 18px
+                letter-spacing: 0.02em
+                color: #000000
 
-                p
-                    font-style: normal
-                    font-weight: 300
-                    font-size: 16px
-                    letter-spacing: 0.02em
-                    color: #878787
+            p
+                font-style: normal
+                font-weight: 300
+                font-size: 16px
+                letter-spacing: 0.02em
+                color: #878787
 
-                .left-side
-                    h3, p
-                        text-align: right
-                
-                .right-side
-                    h3, p
-                        text-align: left
+            .left-side
+                h3, p
+                    text-align: right
+            
+            .right-side
+                h3, p
+                    text-align: left
 
         .logo
-            margin-right: auto
-
             .logo_inner
                 display: flex
                 justify-content: center
@@ -96,3 +97,68 @@
             box-shadow: -3px -3px 10px rgba(250, 251, 255, 0.7), 3px 3px 10px rgba(166, 171, 189, 0.7)
             border-radius: 50%
             margin-right: 24px
+
+        .additional
+            .menu, .phones
+                display: none
+
+                button
+                    width: 60px
+                    height: 60px
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    background: linear-gradient(135.37deg, rgba(0, 0, 0, 0.4) 4.29%, rgba(255, 255, 255, 0.4) 95.6%), #EBEBEB
+                    background-blend-mode: soft-light, normal
+                    border: 1px solid rgba(255, 255, 255, 0.4)
+                    box-sizing: border-box
+                    box-shadow: -3px -3px 10px rgba(250, 251, 255, 0.7), 3px 3px 10px rgba(166, 171, 189, 0.7)
+                    border-radius: 50%
+
+            .modal
+                h1
+                    margin: 20px
+                a
+                    text-decoration: none
+
+@media (max-width: 1332px)
+    .navbar
+        ul
+            .main, .link
+                display: none
+
+            .additional
+                .menu
+                    display: block
+
+@media (max-width: 912px)
+    .navbar
+        ul
+            .additional
+                .phones
+                    display: block
+            .info
+                display: none
+
+@media (max-width: 550px)
+    .navbar
+        ul
+            .logo
+                .logo_inner
+                    .logo_text
+                        p
+                            display: none
+
+                        img
+                            width: 154px
+
+@media (max-width: 486px)
+    .navbar
+        ul
+            li
+                padding: 0 16px
+            .logo
+                .logo_inner
+                    .logo_icon
+                        display: none
+                    
