--- a/src/pages/Contacts/index.sass
+++ b/src/pages/Contacts/index.sass
@@ -40,5 +40,19 @@
 
         .links
             display: flex
-            justify-content: start
+            justify-content: flex-start
             align-items: center
+
+@media (max-width: 1000px)
+    .contacts
+        flex-direction: column
+
+        .left-side, .right-side
+            width: 100%
+            height: 50%
+
+            h1
+                margin-top: 20px
+
+            h1, h2, p, .links
+                margin-left: 0
